revise the application

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,24 @@
 {
-	"cSpell.words": ["homearea", "minmax", "Preorder", "Shodaimama"]
+	"cSpell.words": [
+		"alertflex",
+		"Commited",
+		"homearea",
+		"Horlicks",
+		"minmax",
+		"Preorder",
+		"Shodai",
+		"Shodaimama",
+		"Tometo",
+		"ঐতিহ্যবাহী",
+		"খাবার",
+		"চেয়ে",
+		"দরের",
+		"দিনে",
+		"পণ্য",
+		"বাজার",
+		"মাসের",
+		"মূল্যে",
+		"মৌসুমি",
+		"সরবরাহ"
+	]
 }
